# Master_Schemer

./: .gitignore  DESIGN.md  PRODUCT.md  README.md
.github/workflows/: release.yml
app/: index.html  style.css
app/js/: app.js  geom.js  model.js  render.js  tools.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
test/: cut.test.mjs  geom.test.mjs
