[package]
name = "master-schemer"
version = "0.3.0"
description = "A semantic scheme editor"
authors = ["Ian Hoffecker"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"

[profile.release]
strip = true
lto = true
